[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/Cartoon Fun.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/GameWinOverlay.gd" type="Script" id=2]
[ext_resource path="res://assets/Complete_Level_02.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/comicartoon/Comicartoon-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=6]
size = 96
outline_size = 3
outline_color = Color( 0.58, 0.46226, 0.0754, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_color = Color( 0.44, 0.16588, 0.0484, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 3
outline_color = Color( 0.58, 0.46226, 0.0754, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=8]
resource_name = "MAX_SCORE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/MarginContainer/Carrots/MaxScore/MaxScoreLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/MarginContainer/Carrots/MaxScore/MaxScoreLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 24 ), Vector2( 40, 14 ), Vector2( 80, 24 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/MarginContainer/Carrots/MaxScore/MaxScoreLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/MarginContainer/Carrots/MaxScore/MaxScoreLabel:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/MarginContainer/Carrots/MaxScore/MaxScoreLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "popup"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Label:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1.86607 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1.86 ),
"update": 0,
"values": [ Vector2( 512, 300 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameWinOverlay" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
custom_constants/margin_top = 50

[node name="Label" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 330.0
rect_min_size = Vector2( 0, 276 )
rect_scale = Vector2( 1e-05, 1e-05 )
size_flags_vertical = 0
custom_colors/font_color = Color( 0.929412, 0.745098, 0.121569, 1 )
custom_fonts/font = SubResource( 6 )
text = "You Win"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 334.0
margin_right = 1024.0
margin_bottom = 404.0
custom_constants/margin_right = 64
custom_constants/margin_left = 64

[node name="Carrots" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 64.0
margin_right = 960.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
custom_constants/separation = -35
alignment = 1

[node name="MaxScore" type="MarginContainer" parent="VBoxContainer/MarginContainer/Carrots"]
visible = false
margin_left = 326.0
margin_right = 570.0
margin_bottom = 70.0
custom_constants/margin_left = 40

[node name="MaxScoreLabel" type="Label" parent="VBoxContainer/MarginContainer/Carrots/MaxScore"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 40.0
margin_top = 14.0
margin_right = 244.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0.823529, 0.313726, 0.0901961, 1 )
custom_fonts/font = SubResource( 7 )
text = "MAX SCORE!!"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 408.0
margin_right = 1024.0
margin_bottom = 428.0
custom_constants/margin_top = 20

[node name="Continue" type="Label" parent="VBoxContainer"]
margin_top = 432.0
margin_right = 1024.0
margin_bottom = 484.0
custom_colors/font_color = Color( 0.929412, 0.745098, 0.121569, 1 )
custom_fonts/font = SubResource( 4 )
text = "Press space to restart"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MAX_SCORE = SubResource( 8 )
anims/RESET = SubResource( 5 )
anims/popup = SubResource( 3 )

[node name="GameWin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
